# adrift

./: .gitignore  README.md  package.json
.github/: CODEOWNERS
.github/workflows/: test.yml
apps/cron/: index.ts  package.json
apps/cron/src/: heartbeat.ts
apps/indexer/: .env.example  .gitignore  docker-compose.yml  package.json  ponder.config.ts  ponder.schema.ts  tsconfig.json
apps/indexer/abis/: AdriftAbi.ts  AdriftBundlerAbi.ts  AdriftFactoryAbi.ts  RandomAbi.ts
apps/indexer/lit/: action.ts  doLit.ts  lit.ts  pkp.ts
apps/indexer/src/: index.ts
apps/site/: .env.example  next.config.ts  package.json  types.ts
apps/site/app/: globals.css  layout.tsx  page.tsx
apps/site/components/: CaptainsLog.tsx  ConnectWallet.tsx  DevBanner.tsx  Header.tsx  IconWithTitle.tsx  Leaderboard.tsx  Links.tsx  Manifest.tsx  RaiseFlagJoin.tsx  SeaView.tsx  SeaViewWrapper.tsx
apps/site/data/: leaderboard.ts  stats.ts
apps/site/hooks/: useDidMissCheckIn.tsx  useDurationTimer.tsx  useElapsedTimer.tsx  useHasJoinedGame.tsx  useInterval.ts  useIsMiniApp.tsx  useIsWinner.tsx  useJoinGame.ts  useJoinGameWithPolling.ts  useLeaderboard.ts  useMe.tsx  usePlayer.tsx  usePollForCheckIn.ts  useStats.ts
apps/site/utils/: chain.ts  helpers.ts
contracts/foundry/: .env.example  .gitignore  CLAUDE.md  Makefile  foundry.toml
contracts/foundry/script/: Deploy.s.sol  Game.s.sol
contracts/foundry/src/: Adrift.sol  AdriftFactory.sol  AdriftForever.sol  (+3 more)
contracts/stylus-decompressor/: .env.example  CLAUDE.md  Cargo.toml  Makefile
contracts/stylus-decompressor/src/: lib.rs  main.rs
(+52 files in other folders)
